--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postinstall:electron": "node postinstall",
     "ng": "ng",
     "start": "npm run postinstall:electron && npm-run-all -p ng:serve electron:serve",
+    "web": "npm run postinstall:electron && npm-run-all -p ng:serve:web",
     "build": "npm run postinstall:electron && npm run electron:serve-tsc && ng build",
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
@@ -89,6 +90,8 @@
     "@ngrx/entity": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
-    "@swimlane/ngx-charts": "^12.0.1"
+    "@swimlane/ngx-charts": "^12.0.1",
+    "moment": "^2.24.0",
+    "rxjs-compat": "^6.5.2"
   }
 }
