--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "karma-jasmine-html-reporter": "1.4.0",
     "mocha": "6.1.2",
     "npm-run-all": "4.1.5",
-    "rxjs": "6.5.2",
+    "rxjs": "6.4.0",
     "spectron": "5.0.0",
     "ts-node": "7.0.1",
     "tslint": "5.17.0",
@@ -89,9 +89,12 @@
     "@angular/material-moment-adapter": "^8.0.1",
     "@ngrx/effects": "^8.0.1",
     "@ngrx/entity": "^8.0.1",
+    "@ngrx/router-store": "^8.0.1",
+    "@ngrx/schematics": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
     "@swimlane/ngx-charts": "^12.0.1",
+    "guid-typescript": "^1.0.9",
     "moment": "^2.24.0",
     "ngx-cookie-service": "^2.2.0",
     "rxjs-compat": "^6.5.2",
