--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
     "@swimlane/ngx-charts": "^12.0.1",
+    "electron-settings": "^3.2.0",
     "guid-typescript": "^1.0.9",
     "moment": "^2.24.0",
     "ngx-cookie-service": "^2.2.0",
