--- a/ExilenceNextClient/package.json
+++ b/ExilenceNextClient/package.json
@@ -94,6 +94,7 @@
     "@ngrx/schematics": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
+    "@ngx-pwa/local-storage": "^8.0.2",
     "@swimlane/ngx-charts": "^12.0.1",
     "angular-google-charts": "^0.1.6",
     "guid-typescript": "^1.0.9",
