--- a/ExilenceNextClient/package.json
+++ b/ExilenceNextClient/package.json
@@ -97,6 +97,7 @@
     "@ngx-pwa/local-storage": "^8.0.2",
     "@swimlane/ngx-charts": "^12.0.1",
     "angular-google-charts": "^0.1.6",
+    "fast-json-patch": "^2.1.0",
     "guid-typescript": "^1.0.9",
     "moment": "^2.24.0",
     "ngx-pipes": "^2.5.1",
