Installed export to csv

--- a/ExilenceNextClient/package.json
+++ b/ExilenceNextClient/package.json
@@ -96,8 +96,9 @@
     "@ngrx/store-devtools": "^8.0.1",
     "@ngx-pwa/local-storage": "^8.0.2",
     "@swimlane/ngx-charts": "^12.0.1",
-    "guid-typescript": "^1.0.9",
+    "export-to-csv": "^0.2.1",
     "fast-json-patch": "^2.1.0",
+    "guid-typescript": "^1.0.9",
     "moment": "^2.24.0",
     "ngx-pipes": "^2.5.1",
     "rxjs-compat": "^6.5.2",
