--- a/ExilenceNextClient/package.json
+++ b/ExilenceNextClient/package.json
@@ -70,6 +70,7 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
     "mocha": "6.1.2",
+    "ngrx-store-freeze": "^0.2.4",
     "npm-run-all": "4.1.5",
     "rxjs": "6.4.0",
     "spectron": "5.0.0",
