--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -14,6 +14,7 @@
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-react": "^7.15.0",
+    "moment": "^2.24.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-router": "^5.1.2",
