--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
