--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -6,13 +6,12 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
-    "@types/classnames": "^2.2.9",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
     "@types/react-dom": "16.9.1",
+    "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
-    "classnames": "^2.2.6",
     "clsx": "^1.0.4",
     "electron": "^6.0.10",
     "eslint": "^6.5.1",
@@ -26,7 +25,8 @@
     "react-scripts": "3.1.2",
     "rxjs": "^6.5.3",
     "rxjs-ratelimiter": "^1.0.1",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "uuid": "^3.3.3"
   },
   "main": "src/start.js",
   "scripts": {
