--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -10,6 +10,8 @@
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.4",
+    "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
@@ -20,9 +22,11 @@
     "moment": "^2.24.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "redux-logger": "^3.0.6",
     "rxjs": "^6.5.3",
     "rxjs-ratelimiter": "^1.0.1",
     "typescript": "3.6.3",
@@ -57,12 +61,14 @@
     ]
   },
   "devDependencies": {
-    "electron-builder": "^21.2.0",
-    "@typescript-eslint/eslint-plugin": "^2.3.0",
-    "@typescript-eslint/parser": "^2.3.0",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
-    "@types/react-router-dom": "^4.3.5"
+    "@types/react-router-dom": "^4.3.5",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
+    "electron-builder": "^21.2.0",
+    "electron-devtools-installer": "^2.2.4",
+    "redux": "^4.0.4"
   },
   "build": {
     "appId": "com.exilence.exilence-next-app",
