Added sagas and better handling of environments

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
+    "@types/electron-is-dev": "^1.1.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.4",
@@ -26,6 +27,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.1",
     "rxjs": "^6.5.3",
     "rxjs-ratelimiter": "^1.0.1",
     "typescript": "3.6.3",
