--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -28,10 +28,11 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^1.2.0",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.1",
     "rxjs": "^6.5.3",
     "rxjs-ratelimiter": "^1.0.1",
+    "typesafe-actions": "^4.4.2",
     "typescript": "3.6.3",
     "update-electron-app": "^1.5.0",
     "uuid": "^3.3.3"
