--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -19,10 +19,13 @@
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-react": "^7.15.0",
+    "i18next": "^17.2.0",
+    "i18next-xhr-backend": "^3.2.0",
     "localforage": "^1.7.3",
     "moment": "^2.24.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-i18next": "^10.13.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
