Added working translations setup

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -86,6 +86,9 @@
     "files": [
       "build/**/*"
     ],
+    "extraFiles": [
+      "public/i18n/**/*"
+    ],
     "directories": {
       "buildResources": "src/assets/**/*"
     }
