--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -20,6 +20,9 @@
     "i18next": "^17.2.0",
     "i18next-xhr-backend": "^3.2.0",
     "localforage": "^1.7.3",
+    "mobx": "^5.14.0",
+    "mobx-logger": "^0.7.1",
+    "mobx-react": "^6.1.4",
     "moment": "^2.24.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
@@ -30,7 +33,6 @@
     "rxjs": "^6.5.3",
     "rxjs-ratelimiter": "^1.0.1",
     "tslib": "^1.10.0",
-    "typesafe-actions": "^4.4.2",
     "typescript": "3.6.3",
     "update-electron-app": "^1.5.0",
     "uuid": "^3.3.3"
