--- a/ExilenceNextBackend/package.json
+++ b/ExilenceNextBackend/package.json
@@ -1,6 +1,10 @@
 {
   "name": "exilence-next-backend",
   "version": "1.0.0",
+  "type": "commonjs",
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -12,11 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "koa": "^2.10.0",
+    "koa-router": "^7.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/koa": "^2.0.50",
+    "@types/koa-router": "^7.0.42",
     "@types/node": "^12.7.12",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "eslint": "^6.5.1",
+    "eslint-plugin-node": "^10.0.0",
     "ts-node-dev": "^1.0.0-pre.43",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4"
