--- a/ExilenceNextApp/public/manifest.json
+++ b/ExilenceNextApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Exilence NEXT",
+  "name": "Exilence NEXT app",
   "icons": [
     {
       "src": "favicon.ico",
