--- a/ExilenceNextBackend/package.json
+++ b/ExilenceNextBackend/package.json
@@ -17,11 +17,15 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.10.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/koa": "^2.0.50",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.42",
     "@types/node": "^12.7.12",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
