Tweaked to working typeorm

--- a/ExilenceNextBackend/ormconfig.json
+++ b/ExilenceNextBackend/ormconfig.json
@@ -1,19 +1,19 @@
 {
    "type": "mssql",
-   "host": "localhost",
-   "username": "sa",
-   "password": "Admin12345",
-   "database": "tempdb",
+   "host": "116.203.71.183",
+   "username": "Exilence",
+   "password": "Nidzop2#",
+   "database": "ExilenceNext",
    "synchronize": true,
    "logging": false,
    "entities": [
-      "src/entity/**/*.ts"
+      "dist/entity/**/*.js"
    ],
    "migrations": [
-      "src/migration/**/*.ts"
+      "dist/migration/**/*.js"
    ],
    "subscribers": [
-      "src/subscriber/**/*.ts"
+      "dist/subscriber/**/*.js"
    ],
    "cli": {
       "entitiesDir": "src/entity",
