--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -6,11 +6,6 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
-    "@types/electron-is-dev": "^1.1.1",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.8",
-    "@types/react": "16.9.4",
-    "@types/react-dom": "16.9.1",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "eslint": "^6.5.1",
@@ -24,6 +19,7 @@
     "mobx-logger": "^0.7.1",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.4",
+    "mobx-utils": "^5.5.1",
     "moment": "^2.24.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
@@ -36,6 +32,7 @@
     "tslib": "^1.10.0",
     "typescript": "3.6.3",
     "update-electron-app": "^1.5.0",
+    "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
   "main": "public/electron.js",
@@ -66,8 +63,14 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
+    "@types/electron": "^1.6.10",
+    "@types/electron-is-dev": "^1.1.1",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.8",
+    "@types/react": "16.9.4",
+    "@types/react-dom": "16.9.1",
+    "@types/uuid": "^3.4.5",
+    "@types/yup": "^0.26.24",
     "@types/react-router-dom": "^4.3.5",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
