Remade migrations and small tweks

--- a/ExilenceNextBackend/API/appsettings.json
+++ b/ExilenceNextBackend/API/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ExilenceConnection": "Server=116.203.71.183; Database=ExilenceNext; User ID=Exilence;Password=Nidzop2#"
+  },
+  "Settings": {
+    "InstanceName": "Batman"
   }
 }
