--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3",
-    "@material-ui/styles": "^4.4.3",
+    "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.5.2",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "eslint": "^6.5.1",
@@ -30,6 +30,7 @@
     "rxjs": "^6.5.3",
     "rxjs-ratelimiter": "^1.0.1",
     "tslib": "^1.10.0",
+    "typelevel-ts": "^0.3.5",
     "typescript": "3.6.3",
     "update-electron-app": "^1.5.0",
     "uuid": "^3.3.3",
