--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.2",
     "axios": "^0.19.0",
+    "axios-observable": "^1.1.2",
     "clsx": "^1.0.4",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
