--- a/ExilenceNextBackend/BackgroundProcessor/BackgroundProcessor.csproj
+++ b/ExilenceNextBackend/BackgroundProcessor/BackgroundProcessor.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.0-preview1.19508.20" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
