--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -25,6 +25,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-i18next": "^10.13.1",
+    "react-image": "^2.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
