--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.2",
+    "@microsoft/signalr": "^3.0.1",
+    "@microsoft/signalr-protocol-msgpack": "^3.0.0",
     "axios": "^0.19.0",
     "axios-observable": "^1.1.2",
     "clsx": "^1.0.4",
