Added example of using jwt tokens for roles

--- a/ExilenceNextBackend/API/appsettings.json
+++ b/ExilenceNextBackend/API/appsettings.json
@@ -11,6 +11,7 @@
     "ExilenceConnection": "Server=116.203.71.183; Database=ExilenceNext; User ID=Exilence;Password=Nidzop2#"
   },
   "Settings": {
-    "InstanceName": "Batman"
+    "InstanceName": "Batman",
+    "Secret": "UUXUs2Wqr4qXKWxGJrgvDCeG"
   }
 }
