Rewrote some repo methods to iqueryables. A

--- a/ExilenceNextBackend/API/appsettings.json
+++ b/ExilenceNextBackend/API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ExilenceConnection": "Server=116.203.71.183; Database=ExilenceNext; User ID=Exilence;Password=Nidzop2#"
+    "ExilenceConnection": "Server=XXXX; Database=XXXX; User ID=XXXX;Password=XXXX"
   },
   "Settings": {
     "InstanceName": "Batman",
