--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -42,7 +42,7 @@
     "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
-  "main": "public/electron.ts",
+  "main": "public/electron.js",
   "homepage": "./",
   "scripts": {
     "react-start": "react-scripts start",
