--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -26,13 +26,13 @@
     "mobx-react": "^6.1.4",
     "mobx-utils": "^5.5.1",
     "moment": "^2.24.0",
-    "notistack": "^0.9.6",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-i18next": "^10.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "react-toastify": "^5.4.1",
     "rxjs": "^6.5.3",
     "rxjs-ratelimiter": "^1.0.1",
     "tslib": "^1.10.0",
