--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exilence-next-app",
-  "version": "0.1.0",
+  "version": "0.0.6",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.2",
@@ -13,6 +13,9 @@
     "axios": "^0.19.0",
     "axios-observable": "^1.1.2",
     "clsx": "^1.0.4",
+    "electron-is-dev": "^1.1.0",
+    "electron-log": "^3.0.9",
+    "electron-updater": "^4.2.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-react": "^7.15.0",
@@ -38,7 +41,6 @@
     "tslib": "^1.10.0",
     "typelevel-ts": "^0.3.5",
     "typescript": "3.6.3",
-    "update-electron-app": "^1.5.0",
     "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
@@ -50,7 +52,7 @@
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
-    "release": "npm run react-build && electron-builder --publish=never",
+    "release": "npm run react-build && electron-builder",
     "build": "npm run react-build && npm run electron-build",
     "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
@@ -98,6 +100,11 @@
     ],
     "directories": {
       "buildResources": "src/assets/**/*"
+    },
+    "publish": {
+      "provider": "github",
+      "repo": "exilence-next",
+      "owner": "viktorgullmark"
     }
   }
 }
