Created generic modal for confirmation

--- a/ExilenceNextApp/.eslintrc.json
+++ b/ExilenceNextApp/.eslintrc.json
@@ -25,6 +25,7 @@
       "@typescript-eslint"
   ],
   "rules": {
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "react/prop-types": "off"
   }
 }
