--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -19,6 +19,7 @@
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-react": "^7.15.0",
+    "export-to-csv": "^0.2.1",
     "formik": "^1.5.8",
     "i18next": "^17.2.0",
     "i18next-xhr-backend": "^3.2.0",
