--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -16,6 +16,7 @@
     "electron-is-dev": "^1.1.0",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
+    "electron-window-state": "^5.0.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-react": "^7.15.0",
