--- a/ExilenceNextBackend/Shared/Shared.csproj
+++ b/ExilenceNextBackend/Shared/Shared.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20191214224408_UpdatedSnapshotModels.cs" />
+    <Compile Remove="Migrations\20191214224408_UpdatedSnapshotModels.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
