Work in progress

--- a/ExilenceNextBackend/BackgroundProcessor/Logger.csproj
+++ b/ExilenceNextBackend/BackgroundProcessor/Logger.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
