Reworked api data integration to be dependent on backend (no longer uses queue)

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -56,7 +56,7 @@
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
-    "release": "npm run react-build && electron-builder",
+    "release": "npm run react-build && electron-builder --publish=never",
     "build": "npm run react-build && npm run electron-build",
     "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
