--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -10,10 +10,24 @@
     "@microsoft/signalr-protocol-msgpack": "^3.1.0",
     "@sentry/browser": "^5.9.1",
     "@sentry/electron": "^1.0.0",
+    "@types/d3-array": "^2.0.0",
+    "@types/d3-time-format": "^2.1.1",
     "@types/universal-analytics": "^0.4.3",
+    "@vx/axis": "0.0.193-alpha.2",
+    "@vx/curve": "0.0.193-alpha.2",
+    "@vx/event": "0.0.193-alpha.2",
+    "@vx/gradient": "0.0.193-alpha.2",
+    "@vx/grid": "0.0.193-alpha.2",
+    "@vx/group": "0.0.193-alpha.2",
+    "@vx/mock-data": "0.0.193-alpha.2",
+    "@vx/scale": "0.0.193-alpha.2",
+    "@vx/shape": "0.0.193-alpha.2",
+    "@vx/tooltip": "0.0.193-alpha.2",
     "axios": "^0.19.0",
     "axios-observable": "^1.1.2",
     "clsx": "^1.0.4",
+    "d3-array": "^2.4.0",
+    "d3-time-format": "^2.2.3",
     "electron-is-dev": "^1.1.0",
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
