--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exilence-next-app",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.2",
@@ -71,7 +71,7 @@
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
-    "release": "npm run react-build && electron-builder --publish=never",
+    "release": "npm run react-build && electron-builder",
     "build": "npm run react-build && npm run electron-build",
     "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
