--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -50,6 +50,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-i18next": "^10.13.1",
+    "react-number-format": "^4.3.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
