--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -33,7 +33,7 @@
     "electron-log": "^3.0.9",
     "electron-updater": "^4.2.0",
     "electron-window-state": "^5.0.3",
-    "eslint": "^6.6.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-react": "^7.15.0",
     "export-to-csv": "^0.2.1",
@@ -59,7 +59,7 @@
     "rxjs-ratelimiter": "^1.0.1",
     "tslib": "^1.10.0",
     "typelevel-ts": "^0.3.5",
-    "typescript": "3.6.3",
+    "typescript": "^3.7.5",
     "universal-analytics": "^0.4.20",
     "uuid": "^3.3.3",
     "yup": "^0.27.0"
