--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -11,19 +11,7 @@
     "@rehooks/component-size": "^1.0.3",
     "@sentry/browser": "^5.9.1",
     "@sentry/electron": "^1.0.0",
-    "@types/d3-array": "^2.0.0",
-    "@types/d3-time-format": "^2.1.1",
     "@types/universal-analytics": "^0.4.3",
-    "@vx/axis": "0.0.193-alpha.2",
-    "@vx/curve": "0.0.193-alpha.2",
-    "@vx/event": "0.0.193-alpha.2",
-    "@vx/gradient": "0.0.193-alpha.2",
-    "@vx/grid": "0.0.193-alpha.2",
-    "@vx/group": "0.0.193-alpha.2",
-    "@vx/mock-data": "0.0.193-alpha.2",
-    "@vx/scale": "0.0.193-alpha.2",
-    "@vx/shape": "0.0.193-alpha.2",
-    "@vx/tooltip": "0.0.193-alpha.2",
     "axios": "^0.19.0",
     "axios-observable": "^1.1.2",
     "clsx": "^1.0.4",
@@ -38,6 +26,8 @@
     "eslint-plugin-react": "^7.15.0",
     "export-to-csv": "^0.2.1",
     "formik": "^2.0.8",
+    "highcharts": "^8.0.0",
+    "highcharts-react-official": "^2.2.2",
     "i18next": "^17.2.0",
     "i18next-xhr-backend": "^3.2.0",
     "localforage": "^1.7.3",
