--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -11,6 +11,7 @@
     "@rehooks/component-size": "^1.0.3",
     "@sentry/browser": "^5.9.1",
     "@sentry/electron": "^1.0.0",
+    "@types/reactour": "^1.13.1",
     "@types/universal-analytics": "^0.4.3",
     "axios": "^0.19.0",
     "axios-observable": "^1.1.2",
@@ -37,6 +38,7 @@
     "mobx-react": "^6.1.4",
     "mobx-utils": "^5.5.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-i18next": "^10.13.1",
@@ -45,8 +47,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-toastify": "^5.4.1",
+    "reactour": "^1.16.0",
     "rxjs": "^6.5.3",
     "rxjs-ratelimiter": "^1.0.1",
+    "styled-components": "^4.0.0",
     "tslib": "^1.10.0",
     "typeface-roboto": "0.0.75",
     "typelevel-ts": "^0.3.5",
