--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -37,6 +37,7 @@
     "mobx-utils": "^5.5.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "poe-log-monitor": "^1.2.5",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-i18next": "^10.13.1",
@@ -111,7 +112,8 @@
     ],
     "extraFiles": [
       "public/i18n/**/*",
-      "public/overlays/**/*"
+      "public/overlays/**/*",
+      "public/background-tasks/**/*"
     ],
     "directories": {
       "buildResources": "src/assets/**/*"
