--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -45,6 +45,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-table": "^7.6.0",
     "react-toastify": "^5.4.1",
     "reactour": "^1.16.0",
     "rxjs": "^6.5.3",
