--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -12,6 +12,7 @@
     "@rehooks/component-size": "^1.0.3",
     "@sentry/browser": "^5.9.1",
     "@sentry/electron": "^1.0.0",
+    "@types/react-table": "^7.0.18",
     "@types/reactour": "^1.13.1",
     "@types/universal-analytics": "^0.4.3",
     "axios": "^0.19.0",
@@ -45,7 +46,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-table": "^7.6.0",
+    "react-table": "^7.1.0",
     "react-toastify": "^5.4.1",
     "reactour": "^1.16.0",
     "rxjs": "^6.5.3",
