--- a/ExilenceNextApp/.prettierrc
+++ b/ExilenceNextApp/.prettierrc
@@ -5,5 +5,6 @@
   "arrowParens": "always",
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 100
+  "printWidth": 100,
+  "endOfLine": "auto"
 }
