--- a/ExilenceNextApp/.eslintrc.json
+++ b/ExilenceNextApp/.eslintrc.json
@@ -23,9 +23,9 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "no-unused-vars": "off",
+    "no-unused-vars": 0,
     "@typescript-eslint/no-unused-vars": [
-      2,
+      1,
       { "args": "all", "ignoreRestSiblings": true, "argsIgnorePattern": "^_" }
     ],
     "prettier/prettier": 2,
