--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -43,7 +43,7 @@
     "react-number-format": "^4.3.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^4.0.0",
     "react-table": "^7.6.0",
     "react-toastify": "^5.4.1",
     "reactour": "^1.16.0",
@@ -103,7 +103,9 @@
     "cross-env": "^6.0.3",
     "electron": "^7.1.11",
     "electron-builder": "^22.3.2",
-    "eslint": "^6.8.0",
+    "electron-context-menu": "^2.3.0",
+    "electron-devtools-installer": "^3.1.1",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
