--- a/ExilenceNextApp/tsconfig.json
+++ b/ExilenceNextApp/tsconfig.json
@@ -20,6 +20,7 @@
     "noEmit": true,
     "jsx": "react",
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false
   },
   "include": [
     "src",
