Upgraded mobx and dependencies

--- a/ExilenceNextApp/tsconfig.json
+++ b/ExilenceNextApp/tsconfig.json
@@ -20,7 +20,8 @@
     "noEmit": true,
     "jsx": "react",
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "useDefineForClassFields": true
   },
   "include": [
     "src",
