Added base for customizing item prices

--- a/ExilenceNextApp/.eslintrc.json
+++ b/ExilenceNextApp/.eslintrc.json
@@ -23,6 +23,7 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
+    "no-debugger": 0,
     "no-unused-vars": 0,
     "prefer-const": 1,
     "@typescript-eslint/no-unused-vars": [
