feat: initial screen spinner

--- a/ExilenceNextApp/public/manifest.json
+++ b/ExilenceNextApp/public/manifest.json
@@ -3,6 +3,6 @@
   "name": "Exilence NEXT app",
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#0e0e0e",
+  "background_color": "#0e0e0e"
 }
