Removed logging of requests

--- a/ExilenceNextBackend/API/nlog.config
+++ b/ExilenceNextBackend/API/nlog.config
@@ -34,10 +34,11 @@
 
     <!--Skip non-critical Microsoft logs and so log only own logs-->
     <logger name="Microsoft.*" maxlevel="Info" final="true" />
+    <logger name="System.*" maxlevel="Info" final="true" />
     <!-- BlackHole without writeTo -->
     
     <logger name="*" minlevel="Debug" writeTo="console" />
-    <logger name="*" minlevel="Debug" writeTo="logfile-day" />
+    <logger name="*" minlevel="Error" writeTo="logfile-day" />
     
   </rules>
 </nlog>
