Updated electron with dependencies

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -18,11 +18,11 @@
     "axios": "^0.21.0",
     "axios-observable": "^1.1.2",
     "clsx": "^1.0.4",
-    "electron-context-menu": "^2.3.0",
+    "electron-context-menu": "^2.5.0",
     "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "^1.1.0",
-    "electron-log": "^4.2.4",
-    "electron-updater": "^4.2.0",
+    "electron-log": "^4.3.2",
+    "electron-updater": "^4.3.8",
     "electron-window-state": "^5.0.3",
     "export-to-csv": "^0.2.1",
     "formik": "^2.0.8",
@@ -100,10 +100,11 @@
     "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "chokidar": "^3.5.1",
     "concurrently": "^5.0.0",
     "cross-env": "^7.0.2",
-    "electron": "^10.1.5",
-    "electron-builder": "^22.9.1",
+    "electron": "^12.0.2",
+    "electron-builder": "^22.10.5",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.13.0",
