Concept for redirecting from the browser

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -136,6 +136,12 @@
     },
     "win": {
       "icon": "build/icon.ico"
+    },
+    "protocols": {
+      "name": "exilence-next",
+      "schemes": [
+        "exilence"
+      ]
     }
   }
 }
