Features/new oauth2 flow (#670)
* Started working on support for the new scopes

* Session id removal work in progress

* Concept for redirecting from the browser

* Update external.service.ts

* Cleanup

* Cleanup

* Translation update

* Translation

* Better rendering of patreon logo

* Prototyped new hub and endpoint in auth controller

* Delete authWindow.js

* Update index.js

* Update electron.js

* Update LoginContentContainer.tsx

* Update accountStore.ts

* Redirect

* Update accountStore.ts

* Updated translation

* Added callback logic

* Changed redirect url

* Updated changelog

* Added mac osx support for new auth flow

* Cleanup

* Fixed typo

Co-authored-by: Petter <petterannerwall@gmail.com>

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -137,8 +137,13 @@
     "win": {
       "icon": "build/icon.ico"
     },
-    "mac": {
-      "icon": "build/tray.jpg"
+    "protocols": {
+      "name": "exilence-next",
+      "schemes": [
+        "exilence"
+      ],
+      "mac": {
+        "icon": "build/tray.jpg"
+      }
     }
-  }
 }
