fix(macos): release script

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -67,10 +67,12 @@
     "react-build": "react-scripts build",
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
-    "electron-build": "electron-builder",
-    "release": "npm run react-build && electron-builder",
+    "electron-build": "electron-builder -mwl",
+    "release": "npm run react-build && electron-builder -mwl",
     "build": "npm run react-build && npm run electron-build",
-    "build-prod": "npm run react-build && electron-builder --publish=never",
+    "smoke-build-linux": "npm run react-build && electron-builder -l --publish=never",
+    "smoke-build-mac": "npm run react-build && electron-builder -m --publish=never",
+    "smoke-build-win": "npm run react-build && electron-builder -w --publish=never",
     "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
     "eslint": "eslint \"./**/*.{js,jsx,ts,tsx}\"",
     "prettier": "prettier \"./**/*.{js,jsx,ts,tsx}\""
@@ -140,7 +142,8 @@
       "icon": "build/icon.ico"
     },
     "mac": {
-      "icon": "build/icon512x512.png"
+      "icon": "build/icon512x512.png",
+      "category": "public.app-category.utilities"
     },
     "linux": {
       "artifactName":"Exilence-Next-${version}.${ext}",
