Updated release command

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -70,7 +70,7 @@
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
-    "release": "npm run react-build && electron-builder",
+    "release": "npm run react-build && tsc -p electron && electron-builder",
     "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
     "build": "npm run react-build && tsc -p electron && electron-build",
     "smoke-build-linux": "npm run react-build && tsc -p electron && electron-builder -l --publish=never",
