--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exilence-next-app",
-  "version": "1.0.0",
+  "version": "1.0.0-beta",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.4.1",
